[package]
name = "rust_sse_sqlite_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

# SQLite + async
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "macros"] }

# SSE 里会用到的 stream 工具
futures-util = "0.3"
tokio-stream = "0.1"